--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /node_modules
+/public/css
 /public/hot
+/public/js
+/public/fonts
 /public/storage
+/public/mix-manifest.json
 /storage/*.key
 /vendor
 /.idea
