--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "laravel-mix": "^0.12.1",
     "lodash": "^4.17.4",
     "vue": "^2.4.1"
+  },
+  "dependencies": {
+    "vue-router": "^2.7.0"
   }
 }
